--- a/proscanpdf_privacypolicy.html
+++ b/proscanpdf_privacypolicy.html
@@ -149,8 +149,14 @@
 	<body>
 		<div class="container">
 			<!-- PRIVACY POLICY SECTION -->
-			<h1>Privacy Policy for ProScan PDF</h1>
-			<p class="last-updated">Last updated: September 10, 2025</p>
+			<div style="text-align: center; margin-bottom: 2rem;">
+				<div style="display: flex; align-items: center; justify-content: center; gap: 12px; margin-bottom: 8px;">
+					<img src="images/proscan_icon.png" alt="ProScan PDF Icon" style="width: 32px; height: 32px;">
+					<h1 style="margin: 0; font-size: 2rem;">Pro Scan PDF</h1>
+				</div>
+				<h2 style="margin: 0; font-size: 1.5rem;">Privacy Policy</h2>
+			</div>
+			<p class="last-updated">Last updated: December 10, 2024</p>
 
 			<p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use ProScan PDF and tells You about Your privacy rights and how the law protects You.</p>
 
@@ -309,7 +315,7 @@
 				<li><strong>Subscription Data:</strong> Retained as long as legally required for financial records</li>
 			</ul>
 
-			<p><strong>Your Document Data:</strong> All documents, scans, and PDFs are stored locally on your device. We do not have access to this data and cannot delete it remotely. You maintain full control over your documents and can delete them directly from the app or your device.</p>
+			<p><strong>Your Document Data:</strong> All documents, scans, and PDFs are stored locally on your device and may sync to your iCloud Documents folder if iCloud is enabled. We do not have access to this data and cannot delete it remotely. You maintain full control over your documents and can delete them directly from the app or your device. iCloud synchronization is managed entirely by Apple according to their privacy policies.</p>
 
 			<h2>Data Security</h2>
 			<p>The security of Your Personal Data is important to Us. We implement appropriate technical and organizational measures to protect your data:</p>
@@ -354,8 +360,14 @@
 			<div class="section-divider"></div>
 
 			<!-- TERMS AND CONDITIONS SECTION -->
-			<h1>Terms and Conditions for ProScan PDF</h1>
-			<p class="last-updated">Last updated: September 10, 2025</p>
+			<div style="text-align: center; margin-bottom: 2rem;">
+				<div style="display: flex; align-items: center; justify-content: center; gap: 12px; margin-bottom: 8px;">
+					<img src="images/proscan_icon.png" alt="ProScan PDF Icon" style="width: 32px; height: 32px;">
+					<h1 style="margin: 0; font-size: 2rem;">Pro Scan PDF</h1>
+				</div>
+				<h2 style="margin: 0; font-size: 1.5rem;">Terms and Conditions</h2>
+			</div>
+			<p class="last-updated">Last updated: December 10, 2024</p>
 
 			<p>Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using the ProScan PDF mobile application (the "Service") operated by us ("us", "we", or "our").</p>
 
@@ -459,11 +471,24 @@
 			<h3>Your Documents</h3>
 			<p>You retain all rights to the documents you scan and PDFs you create using the Application. We do not claim ownership of your content.</p>
 
-			<h3>Local Storage</h3>
-			<p>All documents and PDFs are stored locally on your device. We do not have access to your document content and do not store your documents on our servers.</p>
+			<h3>Local Storage and iCloud Sync</h3>
+			<p>All documents and PDFs are stored locally on your device in your Documents folder. ProScan PDF integrates with iCloud Documents to provide seamless synchronization across your Apple devices:</p>
+			<ul>
+				<li><strong>iCloud Documents Integration:</strong> Documents are stored in your iCloud Documents folder when iCloud is enabled</li>
+				<li><strong>Cross-Device Sync:</strong> Your scanned documents automatically sync across all your Apple devices signed into the same iCloud account</li>
+				<li><strong>User Control:</strong> You can enable or disable iCloud sync through your device settings</li>
+				<li><strong>Apple's Privacy:</strong> iCloud synchronization is handled entirely by Apple according to their privacy policies</li>
+			</ul>
 
-			<h3>Data Backup</h3>
-			<p>You are responsible for backing up your documents. We recommend using iCloud or other backup solutions to protect your important documents.</p>
+			<p><strong>Important:</strong> When iCloud Documents sync is enabled, your documents are stored in Apple's iCloud service according to Apple's terms and privacy policy. We do not have access to your iCloud data - this is handled entirely by Apple's secure infrastructure.</p>
+
+			<h3>Data Backup and iCloud Integration</h3>
+			<p>You are responsible for backing up your documents. ProScan PDF integrates with iCloud Documents to provide automatic synchronization:</p>
+			<ul>
+				<li><strong>iCloud Documents:</strong> When enabled, your documents automatically sync across all your Apple devices</li>
+				<li><strong>Additional Backup:</strong> We recommend also using other backup solutions for important documents</li>
+				<li><strong>User Control:</strong> You can enable or disable iCloud sync in your device settings</li>
+			</ul>
 
 			<h3>Content Responsibility</h3>
 			<p>You are solely responsible for:</p>
@@ -479,7 +504,7 @@
 			<p>Your privacy is important to us. Our collection and use of personal information is governed by our Privacy Policy, which is incorporated into these Terms by reference.</p>
 
 			<div class="important-notice">
-				<strong>Privacy Commitment:</strong> We do not access, store, or transmit your scanned documents. All document processing occurs locally on your device.
+				<strong>Privacy Commitment:</strong> We do not access, store, or transmit your scanned documents. All document processing occurs locally on your device. When iCloud Documents sync is enabled, documents are synchronized through Apple's secure iCloud infrastructure according to Apple's privacy policies.
 			</div>
 
 			<h2>Intellectual Property</h2>
@@ -570,10 +595,6 @@
 
 			<ul>
 				<li>These Terms are between you and us, not Apple</li>
-				<li>Apple has no responsibility for the Application or its content</li>
-				<li>Apple has no obligation to provide maintenance or support for the Application</li>
-				<li>In the event of any failure of the Application to conform to any applicable warranty, you may notify Apple, and Apple will refund the purchase price (if any) for the Application</li>
-				<li>Apple is not responsible for addressing any claims relating to the Application or your possession/use of the Application</li>
 				<li>Apple is a third-party beneficiary of these Terms and may enforce these Terms against you</li>
 			</ul>
 
@@ -613,4 +634,8 @@
 			</div>
 		</div>
 	</body>
-</html>
+</html> has no responsibility for the Application or its content</li>
+				<li>Apple has no obligation to provide maintenance or support for the Application</li>
+				<li>In the event of any failure of the Application to conform to any applicable warranty, you may notify Apple, and Apple will refund the purchase price (if any) for the Application</li>
+				<li>Apple is not responsible for addressing any claims relating to the Application or your possession/use of the Application</li>
+				<li>Apple
