--- a/index.html
+++ b/index.html
@@ -330,6 +330,28 @@
 									</a>
 								</div>
 							</section>
+							
+							<section class="spotlight">
+								<div class="image">
+									<img src="images/poppopfruits-icon.png" alt="Pop Pop Fruits App Icon" class="app-icon">
+								</div>
+								<div class="content game-card">
+									<h3>Pop Pop Fruits</h3>
+									<p>Pop the Fruits with blazing speed, but avoid the crafty decoys! Dive into a fruit popping frenzy that will test your speed, precision and split-second decision making!</p>
+									<a href="#" class="button coming-soon">Coming Soon</a>
+								</div>
+							</section>
+							
+							<section class="spotlight">
+								<div class="image">
+									<img src="images/proscanpdf-icon.png" alt="ProScan PDF App Icon" class="app-icon">
+								</div>
+								<div class="content game-card">
+									<h3>ProScan PDF</h3>
+									<p>Mobile camera scanner app featuring Scan, Edit, OCR & more. Transform your phone into a powerful document scanner with professional results.</p>
+									<a href="#" class="button coming-soon">Coming Soon</a>
+								</div>
+							</section>
 						</div>
 					</section>
 
