--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="#games">Games</a></li>
+											<li><a href="#apps">Apps</a></li>
 											<li><a href="#about">About</a></li>
 											<li><a href="#contact">Contact</a></li>
 										</ul>
@@ -338,10 +339,15 @@
 								<div class="content game-card">
 									<h3>Pop Pop Fruits</h3>
 									<p>Pop the Fruits with blazing speed, but avoid the crafty decoys! Dive into a fruit popping frenzy that will test your speed, precision and split-second decision making!</p>
-									<a href="#" class="button coming-soon">Coming Soon</a>
+									<a href="https://apps.apple.com/ro/app/pop-pop-fruits-tap-frenzy/id6749312011" target="_blank">
+										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
+									</a>
 								</div>
 							</section>
 							
+				<!-- Apps -->
+					<section id="apps" class="wrapper alt style2">
+						<div class="inner">
 							<section class="spotlight">
 								<div class="image">
 									<img src="images/proscanpdf-icon.png" alt="ProScan PDF App Icon" class="app-icon">
