--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 							that challenge your mind and reflexes.</p>
 							<ul class="actions special">
 								<li><a href="#games" class="button primary scrolly">View My Games</a></li>
+								<li><a href="#apps" class="button primary scrolly">View My Apps</a></li>
 							</ul>
 						</div>
 						<a href="#about" class="more scrolly">Learn More</a>
