--- a/index.html
+++ b/index.html
@@ -253,9 +253,11 @@
 					<section id="about" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Crafting Mobile Gaming Experiences</h2>
+								<h2>Crafting Mobile Gaming Experiences & Utility Apps</h2>
 								<p>From mind-bending puzzles to fast-paced arcade action, each game is designed<br />
-								to provide hours of entertainment and challenge players worldwide.</p>
+								to provide hours of entertainment and challenge players worldwide.<br /><br />
+								Beyond gaming, I also develop practical utility apps that solve real-world problems,<br />
+								bringing professional-grade tools to your mobile device for enhanced productivity.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Quality</span></span></li>
