--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Paul CRP Games</a></h1>
+						<h1><a href="index.html">Paul CRP</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -441,3 +441,4 @@
 
 	</body>
 </html>
+
