--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Paul CRP</a></h1>
+						<h1><a href="index.html">Paul CRP Games</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -353,11 +353,24 @@
 						<div class="inner">
 							<section class="spotlight">
 								<div class="image">
-									<img src="images/proscanpdf-icon.png" alt="ProScan PDF App Icon" class="app-icon">
+									<img src="images/proscan-icon.png" alt="ProScan PDF App Icon" class="app-icon">
 								</div>
 								<div class="content game-card">
 									<h3>ProScan PDF</h3>
-									<p>Mobile camera scanner app featuring Scan, Edit, OCR & more. Transform your phone into a powerful document scanner with professional results.</p>
+									<p>Newest cutting-edge AI-powered mobile camera scanning app. Scan, Edit, Sign, Lock, OCR & much more. No ads, no watermarks. Exactly how a pro scanning app should be.</p>
+									<a href="https://apps.apple.com/ro/app/proscan-pdf-scan-sign-ocr/id6752308731" target="_blank">
+										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
+									</a>
+								</div>
+							</section>
+							
+							<section class="spotlight">
+								<div class="image">
+									<img src="images/eyecolorcam-icon.png" alt="Eye Color Cam App Icon" class="app-icon">
+								</div>
+								<div class="content game-card">
+									<h3>Eye Color Cam</h3>
+									<p>Transform your eye color instantly with AR technology! Choose from 30 stunning shades and textures to create your perfect look with realistic color changes.</p>
 									<a href="#" class="button coming-soon">Coming Soon</a>
 								</div>
 							</section>
@@ -441,4 +454,3 @@
 
 	</body>
 </html>
-
