--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Paul CRP Games</a></h1>
+						<h1><a href="index.html">Paul CRP</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -342,7 +342,7 @@
 								<div class="content game-card">
 									<h3>Pop Pop Fruits</h3>
 									<p>Pop the Fruits with blazing speed, but avoid the crafty decoys! Dive into a fruit popping frenzy that will test your speed, precision and split-second decision making!</p>
-									<a href="https://apps.apple.com/ro/app/pop-pop-fruits-tap-frenzy/id6749312011" target="_blank">
+									<a href="https://apps.apple.com/app/pop-pop-fruits-tap-frenzy/id6749312011" target="_blank">
 										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
 									</a>
 								</div>
@@ -358,7 +358,7 @@
 								<div class="content game-card">
 									<h3>ProScan PDF</h3>
 									<p>Newest cutting-edge AI-powered mobile camera scanning app. Scan, Edit, Sign, Lock, OCR & much more. No ads, no watermarks. Exactly how a pro scanning app should be.</p>
-									<a href="https://apps.apple.com/ro/app/proscan-pdf-scan-sign-ocr/id6752308731" target="_blank">
+									<a href="https://apps.apple.com/app/proscan-pdf-scan-sign-ocr/id6752308731" target="_blank">
 										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
 									</a>
 								</div>
@@ -454,3 +454,4 @@
 
 	</body>
 </html>
+
