--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
 					<section id="upcoming" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>More Games in Development</h2>
-								<p>Building the next generation of mobile entertainment with innovative gameplay<br />
-								and engaging mechanics that keep players coming back for more.</p>
+								<h2>More Apps in Development</h2>
+								<p>Building the next generation mobile apps and games with innovative features, <br />gameplay
+								and engaging mechanics that keep users coming back for more.</p>
 							</header>
 							<ul class="features">
 								<li class="icon solid fa-puzzle-piece">
@@ -392,7 +392,7 @@
 								</li>
 								<li class="icon solid fa-mobile-alt">
 									<h3>Cross-Platform</h3>
-									<p>Developing games that work seamlessly across all iOS devices, from iPhone to iPad.</p>
+									<p>Developing apps that work seamlessly across all iOS devices, from iPhone to iPad.</p>
 								</li>
 								<li class="icon solid fa-trophy">
 									<h3>Game Center</h3>
@@ -454,4 +454,5 @@
 
 	</body>
 </html>
+
 
