--- a/eyecolorcam_privacypolicy.html
+++ b/eyecolorcam_privacypolicy.html
@@ -199,7 +199,7 @@
 				<li><strong>Media Storage:</strong> All processed photos and videos are saved directly to your device's photo library</li>
 			</ul>
 
-			<p><strong>We do not upload, access, store, or transmit your photos, videos, or camera data to our servers.</strong> Your media content remains completely private and under your control.</p>
+			<p><strong>We do not upload, access, store, or transmit your photos, videos, camera or face data to our servers.</strong> Your media content remains completely private and under your control.</p>
 
 			<h3>Camera and Photo Library Access</h3>
 			<p>The App requires access to your device camera and photo library to function:</p>
