--- a/eyecolorcam_privacypolicy.html
+++ b/eyecolorcam_privacypolicy.html
@@ -216,7 +216,7 @@
 			<p>Eye Color Cam does not collect any personal data whatsoever. We do not collect:</p>
 			<ul>
 				<li>Names, email addresses, or contact information</li>
-				<li>Photos, videos, or camera data</li>
+				<li>Photos, videos, camera or face data</li>
 				<li>Location data or device identifiers</li>
 				<li>Usage analytics or behavioral data</li>
 				<li>Any other personal information</li>
