--- a/index.html
+++ b/index.html
@@ -371,7 +371,9 @@
 								<div class="content game-card">
 									<h3>Eye Color Cam</h3>
 									<p>Transform your eye color instantly with AR technology! Choose from 30 stunning shades and textures to create your perfect look with realistic color changes.</p>
-									<a href="#" class="button coming-soon">Coming Soon</a>
+									<a href="https://apps.apple.com/app/eye-color-cam-live-filters/id6752640752" target="_blank">
+										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
+									</a>
 								</div>
 							</section>
 						</div>
@@ -454,5 +456,3 @@
 
 	</body>
 </html>
-
-
