--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			/* Import Apple-style font */
 			@import url('https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@700&display=swap');
 			/* Import handwritten font for quote */
-			@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Allura&display=swap');
 			
 			/* Custom color scheme: Grey and Dark Blue */
 			:root {
@@ -197,7 +197,7 @@
 			}
 			
 			.inspirational-quote {
-				font-family: 'Shadows Into Light', cursive;
+				font-family: 'Allura', cursive;
 				font-size: 1.1rem;
 				font-weight: 400;
 				color: rgba(255, 255, 255, 0.95);
@@ -207,12 +207,12 @@
 			}
 			
 			.quote-author {
-				font-family: 'Shadows Into Light', cursive;
+				font-family: 'Allura', cursive;
 				font-size: 0.9rem;
 				font-weight: 400;
 				color: rgba(255, 255, 255, 0.85);
 				text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-				margin-left: 3rem;
+				text-align: right;
 			}
 			
 			/* Mobile-specific line spacing fix */
@@ -241,7 +241,6 @@
 				
 				.quote-author {
 					font-size: 0.8rem;
-					margin-left: 1.5rem;
 				}
 				
 				.quote-container {
