--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
 				margin-top: 3rem;
 				margin-bottom: 2rem;
 				padding: 2rem 1rem;
+				display: inline-block;
+				text-align: left;
 			}
 			
 			.inspirational-quote {
@@ -204,6 +206,7 @@
 				line-height: 1.6;
 				margin-bottom: 0.3rem;
 				text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+				display: block;
 			}
 			
 			.quote-author {
@@ -213,6 +216,7 @@
 				color: rgba(255, 255, 255, 0.85);
 				text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 				text-align: right;
+				display: block;
 			}
 			
 			/* Mobile-specific line spacing fix */
