--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
 				text-align: left;
 			}
 			
+			#banner .quote-container p,
+			#banner .inspirational-quote,
+			#banner .quote-author,
 			.inspirational-quote {
 				font-family: 'Allura', cursive;
 				font-size: 1.1rem;
@@ -207,8 +210,11 @@
 				margin-bottom: 0.3rem;
 				text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 				display: block;
+				text-transform: none !important;
+				letter-spacing: normal !important;
 			}
 			
+			#banner .quote-author,
 			.quote-author {
 				font-family: 'Allura', cursive;
 				font-size: 0.9rem;
@@ -217,6 +223,8 @@
 				text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 				text-align: right;
 				display: block;
+				text-transform: none !important;
+				letter-spacing: normal !important;
 			}
 			
 			/* Mobile-specific line spacing fix */
@@ -291,11 +299,11 @@
 								<li><a href="#apps" class="button primary scrolly">View My Apps</a></li>
 							</ul>
 							
-							<!-- Henry Ford Quote -->
-							<div class="quote-container">
-								<p class="inspirational-quote">"Whether you think you can or you think you can't, you're right."</p>
-								<p class="quote-author">Henry Ford</p>
-							</div>
+						<!-- Henry Ford Quote -->
+						<div class="quote-container">
+							<p class="inspirational-quote">"Whether you think you can or you think you can't, you're right."</p>
+							<p class="quote-author">Henry Ford</p>
+						</div>
 						</div>
 						<a href="#about" class="more scrolly">Learn More</a>
 					</section>
