--- a/index.html
+++ b/index.html
@@ -182,11 +182,12 @@
 			
 			.banner-description {
 				margin-top: 1.5rem !important;
+				margin-bottom: 1rem !important;
 			}
 			
 			/* Move the "View My Games" button down */
 			#banner .actions.special {
-				margin-top: 2rem !important;
+				margin-top: 2.5rem !important;
 			}
 			
 			/* Quote styling */
