--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 			.spotlight .image {
 				flex: 0 0 auto;
 				margin-right: 3rem;
+				margin-left: 0;
 			}
 			
 			.spotlight .content {
@@ -360,7 +361,7 @@
 										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
 									</a>
 								</div>
-								<div class="image" style="margin-left: 3rem; margin-right: 0;">
+								<div class="image">
 									<img src="images/neurarush-icon.png" alt="NeuraRush App Icon" class="app-icon">
 								</div>
 							</section>
@@ -386,7 +387,7 @@
 										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
 									</a>
 								</div>
-								<div class="image" style="margin-left: 3rem; margin-right: 0;">
+								<div class="image">
 									<img src="images/poppopaliens-icon.png" alt="Pop Pop Aliens App Icon" class="app-icon">
 								</div>
 							</section>
@@ -412,7 +413,7 @@
 										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
 									</a>
 								</div>
-								<div class="image" style="margin-left: 3rem; margin-right: 0;">
+								<div class="image">
 									<img src="images/bouncyfruits-icon.png" alt="Bouncy Fruits App Icon" class="app-icon">
 								</div>
 							</section>
