--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
 									</a>
 								</div>
-								<div class="image">
+								<div class="image" style="margin-left: 3rem; margin-right: 0;">
 									<img src="images/neurarush-icon.png" alt="NeuraRush App Icon" class="app-icon">
 								</div>
 							</section>
@@ -387,7 +387,7 @@
 										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
 									</a>
 								</div>
-								<div class="image">
+								<div class="image" style="margin-left: 3rem; margin-right: 0;">
 									<img src="images/poppopaliens-icon.png" alt="Pop Pop Aliens App Icon" class="app-icon">
 								</div>
 							</section>
@@ -413,7 +413,7 @@
 										<img src="images/app-store-badge.svg" alt="Download on App Store" class="app-store-badge">
 									</a>
 								</div>
-								<div class="image">
+								<div class="image" style="margin-left: 3rem; margin-right: 0;">
 									<img src="images/bouncyfruits-icon.png" alt="Bouncy Fruits App Icon" class="app-icon">
 								</div>
 							</section>
