--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
 			}
 			
 			/* Override orange colors with blue/grey */
-			.button.primary {
-				background-color: var(--primary-color) !important;
-				border-color: var(--primary-color) !important;
-			}
+			.button.primary { background-color: var(--primary-color) !important; border-color: var(--primary-color) !important; }
 			.button.primary:hover { background-color: var(--secondary-color) !important; }
 			.major.style1:before { background-color: var(--primary-color) !important; }
 			.major.style2:before { background-color: var(--accent-color) !important; }
@@ -38,7 +35,7 @@
 			#header.alt { background: rgba(44, 62, 80, 0.9); }
 			.spotlight .content h2 { color: var(--primary-color); }
 			
-			/* Game cards styling */
+			/* Game cards styling (keep your original “chunky” feel) */
 			.game-card {
 				background: rgba(255, 255, 255, 0.95);
 				padding: 2rem;
@@ -47,9 +44,10 @@
 				text-align: center;
 				border: 2px solid var(--light-grey);
 				box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+				/* No width constraints here so the box keeps your original size */
 			}
 			
-			/* App icon styling - Fixed sizing with no shadow */
+			/* App icon styling */
 			.app-icon {
 				width: 120px !important;
 				height: 120px !important;
@@ -80,46 +78,38 @@
 			}
 			
 			/* App Store badge styling */
-			.app-store-badge {
-				width: 150px;
-				height: auto;
-				transition: transform 0.2s ease;
-			}
+			.app-store-badge { width: 150px; height: auto; transition: transform 0.2s ease; }
 			.app-store-badge:hover { transform: scale(1.05); }
 			
-			/* Spotlight layout: consistent alignment + alternation */
+			/* Spotlight layout: explicit alternation, keep original proportions */
+			/* Neutralize template’s built-in alternation so we fully control it */
+			.wrapper.alt.style2 .spotlight { flex-direction: row; }
+			.wrapper.alt.style2 .spotlight:nth-child(2n) { flex-direction: row; }
+			
 			.spotlight {
 				display: flex;
 				align-items: center;
 				padding: 3rem 0;
-				gap: 3rem; /* consistent spacing between icon column and content */
 			}
-			/* Fixed icon column so all icons share the same vertical line */
 			.spotlight .image {
-				flex: 0 0 160px;              /* fixed column width for perfect vertical alignment */
+				flex: 0 0 auto;       /* don’t force width to keep your content box shape */
+				margin: 0 3rem 0 0;   /* icon left spacing by default */
 				display: flex;
-				justify-content: center;      /* center the icon within the fixed column */
 				align-items: center;
-				margin: 0 !important;         /* wipe any inline margins */
+				justify-content: center;
 			}
 			.spotlight .content {
 				flex: 1;
 				text-align: left;
 			}
-			/* Alternate rows by flipping direction */
-			.spotlight.reverse { flex-direction: row-reverse; }
+			/* Alternate rows */
+			.spotlight.reverse { flex-direction: row-reverse !important; }
+			.spotlight.reverse .image { margin: 0 0 0 3rem; } /* mirror spacing when reversed */
 			
 			/* Responsive adjustments */
 			@media (max-width: 768px) {
-				.spotlight {
-					flex-direction: column !important;
-					text-align: center;
-					gap: 1.75rem;
-				}
-				.spotlight .image {
-					flex: 0 0 auto;
-					margin-bottom: 0.5rem !important;
-				}
+				.spotlight { flex-direction: column !important; text-align: center; }
+				.spotlight .image { margin: 0 0 1.5rem 0 !important; }
 				.spotlight .content { text-align: center; }
 			}
 			
@@ -135,8 +125,6 @@
 			/* Banner text styling with proper spacing */
 			.banner-text { margin-bottom: 0.5rem !important; line-height: 1.6 !important; }
 			.banner-description { margin-top: 1.5rem !important; margin-bottom: 1.5rem !important; }
-			
-			/* Move the "View My Games" button down */
 			#banner .actions.special { margin-top: 3.5rem !important; }
 			
 			/* Quote styling */
