--- a/index.html
+++ b/index.html
@@ -245,7 +245,9 @@
             <div class="content game-card">
               <h3>Dash Pal</h3>
               <p>Your all-in-one motion dashboard. Whether you're driving, cycling, flying, sailing, or walking, Dash Pal turns your iPhone into a live dashboard that adapts to every journey.</p>
-              <button class="app-store-badge coming-soon" disabled>Coming Soon</button>
+              <a href="https://apps.apple.com/ro/app/dash-pal-gps-speedometer/id6753625350" target="_blank">
+                <img src="images/app-store-badge.svg" class="app-store-badge" alt="App Store">
+              </a>
             </div>
           </section>
 
